Fixing Hide on small

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -28,6 +28,12 @@
   }
 }
 
+@media (max-width: 767px) {
+  .hide-on-small {
+    display: none;
+  }
+}
+
 @media (min-width: 861px) {
   .accessory-row {
     display: flex;
